<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Web Organizer</string>
    <string name="action_settings">Settings</string>
    <string name="title_section1">Дом</string>
    <string name="title_section2">Работа</string>
    <string name="title_section3">Личное</string>
    <string name="enter_title">Название</string>
    <string name="enter_text">Текст</string>

    <string name="item1">Item1</string>
    <string name="item2">Item2</string>
    <string name="item3">Item3</string>
    <string name="item4">Item4</string>

    <string name="yesterday">Вчера</string>
    <string name="today">Сегодня</string>
    <string name="tomorrow">Завтра</string>
    <string name="in_the_future">В будущем</string>


    <string name="incorect_title">введите название</string>
    <string name="enter_filter_name">Введите название</string>

    <string name="yes">да</string>
    <string name="no">нет</string>

    <string name="delete_dialog">Вы уверены</string>

    <string name="add_tag">Добавить метку</string>
    <string name="add_tag_text">Метка</string>


    <string name="contact_name">Имя</string>
    <string name="contact_sername">Фамилия</string>
    <string name="contact_phone">Телефон</string>
    <string name="contact_email">email</string>
    <string name="contact_date">Дата</string>

</resources>
