<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="never"
        android:title="@string/item1">
    </item>
    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="never"
        android:actionProviderClass="com.example.weborganizer.test.CustomActionProvider"
        android:title="@string/item2">
    </item>
    <item
        android:id="@+id/item3"
        android:showAsAction="never"
        android:title="@string/item3">
    </item>
    <item
        android:id="@+id/item4"
        android:icon="@android:drawable/btn_minus"

        android:showAsAction="never"
        android:title="@string/item4">
    </item>
</menu>